# clpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  clpp.h
samples/: CMakeLists.txt  clcompiler.cpp  clinfo.cpp  imagegen.cpp  pinnedbuffer.cpp  vectoradd.cpp
tests/: CMakeLists.txt  clpptest.cpp
